# ChangeLog for app-text/pdf2oo
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Apr 2007; Markus Ullmann <jokey@gentoo.org> -pdf2oo-20060811.ebuild,
  pdf2oo-20070322.ebuild:
  Drop old and some cosmetics

  05 Apr 2007; Michael Pagano <mpagano@gmail.com> +pdf2oo-20070322.ebuild:
  Version Bump

  15 Aug 2006; Michael Pagano <mpagano@gmail.com> +pdf2oo-20060811.ebuild,
  +metadata.xml:
  New Ebuild for bug 143919
