@@ -1,5 +1,5 @@
 DIST clamtk-3.04.tar.gz 96816 RMD160 a86eebf8e1a57251b733005d5af8ae87711984f6 SHA1 973a5aa4ed76b0cf17d323a890bddb0ae57db8e9 SHA256 74f0f3a3fdd0d2284d4fa578e4ad11386aca73fd97dc6997abce469b56e8187c
 DIST clamtk-kde-0.07.tar.gz 6887 RMD160 c43004c65ed969ce22f402536a89ec5ff3933ad7 SHA1 b74753eda54d0875b6975154b8b4f6914e92ea89 SHA256 dfcdfb06b2d90728124e97d2c75acf2d9b326a08e5583b6be8ddb2f27838ba16
-EBUILD clamtk-3.04.ebuild 1334 RMD160 178193a13b189db78ee53a4d978138757b86c74a SHA1 4e3fcb50a8d1aae935bdc314161bb2c6d29fa23e SHA256 6e353107fc9fa29cb3114a69db47f0746e806014552957be8965e41cf5e0811a
+EBUILD clamtk-3.04.ebuild 1351 RMD160 33c8352fa63fc64bac7bb56725483a3ff382911a SHA1 a7fb320ef8e15af73979ff2a5ac84a56b4354110 SHA256 15dc46a05c321b4b8adb4b629982ddcbd04a0061be21a01644e7a811a036de46
 MISC ChangeLog 1830 RMD160 286af5670e4f30d4fe22c3e4cdd345c596912112 SHA1 86de5decf0863b9d535ea136c1447b467e6720b3 SHA256 a996386d8b2cd84c03e53b62e24d609a866af50a619608520036533137333933
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
