@@ -1,4 +1,4 @@
 DIST pdf2oo-20070322.tar.gz 14786 RMD160 f4d0aebf808ef825975dd53d97a19bdefb40343a SHA1 9697bc9932ed0c4b8e49ecc8b2632ecf0afe2449 SHA256 c3c75e5b7f6644d5b04e5b59eb3fd950be7bede3a5de71a488fb1eabe7c80d5a
-EBUILD pdf2oo-20070322.ebuild 613 RMD160 e8f0c061b0efedb883df3c6681efdad05051226c SHA1 8a716266cab3499741c75f6c8118431c567ae784 SHA256 610749f247753d9ce7d464bd2a43a43cbe788e6786d32ea463d38b36c0698c2e
-MISC ChangeLog 459 RMD160 e2f74ce98cb4084108471337425cf6915faaec57 SHA1 70577e0d6077dcac1894652f39cde9ba0ca1d778 SHA256 2c11201efb2b214d8ece90f88c8c777671695d09c7ca577e09f96b0a425c5870
+EBUILD pdf2oo-20070322.ebuild 666 RMD160 463c5680ef77256747502db73750ea0cfa056aa1 SHA1 004ebfc6296f7445718ea8c4732b2b1670054c2b SHA256 23aa8aba05bfa7883c4c5ce04c3423b39d62b260a2a23fcb42e55a45310ffc95
+MISC ChangeLog 547 RMD160 c4f2d5a53fc545ba1759d3bb983aa05fd6a026cd SHA1 c2c72aee48e05bb552a750bb690d6b19c63ac0da SHA256 fb0000aca347ab112b6f79ca5d3c620160aa6f39b55fc9351a3d57d3288a21e0
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
