@@ -1,4 +1,4 @@
 DIST kabcclient-0.8.1.tar.bz2 570749 RMD160 c5e4e8cc6fc0712ccb651dcb655cb613a68b463b SHA1 3d25e8103130a0b15dd4e3ec7ecc4a4da0598c26 SHA256 a003c8a4f5a28a4adab402b83aff113485607164bea5b2f84fa69524a442c520
-EBUILD kabcclient-0.8.1.ebuild 457 RMD160 56364cd3e247ead0e95aad005d588bcca3725d33 SHA1 9dd4056c8ac4e6458e934f1eba452f71b12d849c SHA256 c68255fccd7d73008350d38ee4e06653adc4b56ea2acc1d796372b151cb1a452
+EBUILD kabcclient-0.8.1.ebuild 474 RMD160 f5e3db24026f95dc34300270fb18a3a9bc5f98b6 SHA1 7f75cd1f95c2157a63bf5f99383a0a1ae4f291c0 SHA256 0ee201c57d9335fa90ab7b962b80c3d1dc970fff81b5b4aacccf803e2a4e03b6
 MISC ChangeLog 252 RMD160 9083b287c6a61d86da8938846405ea910758b190 SHA1 f040b92e046d3a391728b12cf699e65c7648a71f SHA256 71c8c29a8d9bc575574b5550f084df0f0be1bb0fc802a16f042d4d01e76fa506
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
