@@ -2,6 +2,7 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
+EAPI="1"
 inherit kde
 
 DESCRIPTION="A commandline client to KDE's addressbook"
@@ -12,7 +13,7 @@ LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~x86"
 
-DEPEND="|| ( kde-base/kaddressbook kde-base/kdepim )"
+DEPEND="|| ( kde-base/kaddressbook:3.5 kde-base/kdepim:3.5 )"
 RDEPEND="${DEPEND}"
 
 need-kde 3.4.2
