@@ -1,4 +1,4 @@
 DIST projectmanager-0.1.2-24.tar.bz2 535528 RMD160 aa9b29bf6f0b4664e6d0f61f1009c870a7b73dfc SHA1 98b990ed1cd0d2dc571b579d62af6e60201ca387 SHA256 e70a8de7f6ac0e906c3d3c65c0633b16e8c1395c5585759d8f4f064734b05b54
-EBUILD kate-projectmanager-plugin-0.1.2_p24.ebuild 503 RMD160 d7293b3818f56fa220720f45f5bb27d1f2b684cc SHA1 40ab4e7d07e7a1764ad87e5f3d25201ea8cf1df5 SHA256 44a7c521e8258d55903c74cd3c47f2b2b97e54679f96bb463ae0dffd0e0d349b
+EBUILD kate-projectmanager-plugin-0.1.2_p24.ebuild 520 RMD160 1ef7d2200d11dcd34986e991bebf3444541c2f03 SHA1 5865c6e6ceda97b8fc1d122f9ea4243649e0ffe3 SHA256 9915f63915989ad561b16606324e0271dbdd7c6dfc64fcd6a0afc97d07e86a08
 MISC ChangeLog 812 RMD160 364906673874a6c9c7364f3e9164b4060f646493 SHA1 b14c07343f21623fcea319c5c21e9c7751c204c6 SHA256 dfd32abf928965a4a6d3a2f64b9af97883484214c3e00d17a8177729c7a9da96
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
