@@ -1,6 +1,6 @@
 AUX kmpg2.desktop 261 RMD160 64bf446693bf72679fd7e91a25b70d6f0fff4547 SHA1 3316da7ab8884ec443ec42d660d3bd48aaa4f37d SHA256 266b4b5a321f84db0c4d62c3f3d28c0a2032a69b4c2f6321664f878b6ab8b326
 AUX kmpg2profiler.desktop 278 RMD160 dd2c348cbbc0168a4a5e15fe2f14c1877843e2ee SHA1 18ef2aef1977505fa5a175baff2becaceabc8183 SHA256 5522ff92d63ceca8f6aad27a2ab11c71560b4b8b8f893cdc7969359b5293803c
 DIST KmPg2-1.96.tar.bz2 76725 RMD160 744a4c9052c02aec57fc3f925aebf1dfa285d0f2 SHA1 2576364d91bb9b7d0606c41bd93d884f2ab2b925 SHA256 abb7c72f9f979f08d3ec7ca831f6633ef14c04297b9c06ffa2436d5e8a0d4789
-EBUILD kmpg2-1.96.ebuild 1173 RMD160 99e96d26b952ca37d55be1b81805b693d9f56781 SHA1 99599e13c3349f32571c8037e171b9ad15a8713b SHA256 6920ae5d6a9a40df9de02961296f02ad386c2f27abfdbedd0fc4fdc69a845c5e
+EBUILD kmpg2-1.96.ebuild 1190 RMD160 35f9646248bb0ddb1acc1c9eeef5c39376860403 SHA1 1063d54601bbff22dba06da31aa8df942c5382b8 SHA256 6f4681e3b6f5ef567d93e6ceb3071c86462a030431b4fa554496d70d7ceb936c
 MISC ChangeLog 544 RMD160 3f7643016db669e6c5a6477228e81f43a8c0668e SHA1 807b2c7059e0688b357babcf9dbd259152a0d47e SHA256 68c784c8f9cd60e257f072ccf67d35e43e54a7352cbdd5766db309e5e0efdab4
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
