@@ -1,6 +1,6 @@
 AUX remove-gtk1.patch 968 RMD160 d80e57ae80b28d2bcf45e318b0fd41a5fd82bb6e SHA1 69d269172166aa3a75e749f04ec67e6c47c70339 SHA256 4310bd01f4764b677c3408230e377e1588521fd3f443279168f3bfb659167238
 AUX remove-kde.patch 848 RMD160 137bcb67bdfa9ef1fae02c4069ba78b8cf7b2de6 SHA1 5bbf063cbb211101c080570395be22c7ecfb1bb0 SHA256 474b48a137a024dc20bf0dd9c6327dd6b00cddbc5f600660c10f93095aac242e
 DIST galaxy-1.0.4-3mdv2007.0.src.rpm 902482 RMD160 7adec2e5de4c5a548ac8b9064a622b5aa143655e SHA1 b831fd203dd460689de226b077d5eb07c8409946 SHA256 0258035c5161b120b93fa3c6c0a12f30d2aa87efee8a105bd9cb117497794a9e
-EBUILD mandriva-galaxy-1.0.4.ebuild 1110 RMD160 ac940cf63a2ef157896c003d80208627bb3a6d09 SHA1 dc412bbdeda415e08b1884deef1ea6173b0c4cac SHA256 a3fdbfcccb2776a2aad8eee2a3bb866744c6f4cfec62af153342316a421c5dbe
+EBUILD mandriva-galaxy-1.0.4.ebuild 1007 RMD160 33c62ef683d5a82cbe4c37830d9d37a0a066e67e SHA1 534309a500c6d23ea3427dc11cf45a9fa8749103 SHA256 501d399bbd5d67767f5cfbc1d4c4d68866a03426c92cfdd06174a8d8ad01a3f5
 MISC ChangeLog 369 RMD160 567f6b6176158f880a37a2eda28804b52aad2b56 SHA1 a079017eef6881b02bb81674cf48f1905a686f2a SHA256 65ab63ffb2f35726c2c84df5fcd7db4691082095eb0d9c7459f31217b3771ff6
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
