@@ -1,7 +1,8 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/mandriva-galaxy/mandriva-galaxy-1.0.4.ebuild,v 1.17 2005/10/04 13:37:37 metalgod Exp $
+# $Header: $
 
+EAPI="1"
 inherit eutils rpm kde-functions autotools
 
 MDV_EXTRAVERSION="3mdv2007.0"
@@ -16,7 +17,7 @@ KEYWORDS="~amd64 ~x86"
 IUSE="kde"
 
 DEPEND=">=x11-libs/gtk+-2.0
-	kde? ( || ( kde-base/kwin kde-base/kdebase ) )"
+	kde? ( || ( kde-base/kwin:3.5 kde-base/kdebase:3.5 ) )"
 
 RDEPEND="${DEPEND}"
 
