@@ -1,4 +1,4 @@
 DIST serenity-1.7.1.tar.bz2 517435 RMD160 f0e6ec0f2230dcfb9c3bf15769d6bfb7f6dd6a48 SHA1 574e108a60772547c18017eb7b6e1301efb2e7e6 SHA256 22ba2199b3eeae7dcf2c43f13805372a92dc06805753f7bdcc04e91574a9faaa
-EBUILD serenity-1.7.1.ebuild 505 RMD160 caea769146831734af78c6b480af46d98d18c013 SHA1 5d672ab118d083062d184ad7ef4685ea0f552e6c SHA256 33bb05440d3d826b5f9e0d0a8067ebc9642b3a678b2b52bc747adbec3a109ae4
+EBUILD serenity-1.7.1.ebuild 522 RMD160 bfe66f492ef58fa3da7e4845d1ab1a6781c38bbd SHA1 403aa5ae84b89b7e2157e83efcc7dab857ca84be SHA256 283d978d70cf0469e41a2dcd47a0f8d0205fd25e57310b3a4c9dbf293159d280
 MISC ChangeLog 734 RMD160 f6a75821a398227a1dc66c38f2d4bce58c22eb96 SHA1 6d47cd53ef76c5962278cde4e6f7c11a9ef81bb3 SHA256 6d2541055290d1482e9fc13ed3ae78a5595912def2143ca3088ac55481f7986a
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
