@@ -1,6 +1,9 @@
 # ChangeLog for app-text/pdf2oo
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  19 Jan 2008; Jakub Moc <jakub@gentoo.org> pdf2oo-20070322.ebuild:
+  Fix dependencies
 
   18 Apr 2007; Markus Ullmann <jokey@gentoo.org> -pdf2oo-20060811.ebuild,
   pdf2oo-20070322.ebuild:
